fix: fix the spacing issue in home page

--- a/assets/css/stories.css
+++ b/assets/css/stories.css
@@ -7,6 +7,10 @@
 html {
   height: 100%;
 }
+body{
+  font-family: Proxima Nova;
+  src: url('../font/Proxima\ Nova\ Regular.otf')
+}
 a{
   font-family: Proxima Nova;
   src: url('../font/Proxima\ Nova\ Regular.otf')
